# tree-sitter-dql

./: CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  dql.ebnf  go.mod  grammar.js  package.json  php-dql-injections.scm  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: continuous-integration.yml
bindings/c/: tree-sitter-dql.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dql/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDql/: dql.h
bindings/swift/TreeSitterDqlTests/: TreeSitterDqlTests.swift
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: aggregates.txt  basic_queries.txt  case_expressions.txt  crud_operations.txt  joins_and_subqueries.txt
