[package]
name = "tree-sitter-dql"
description = "Language used by Doctrine ORM to query PHP objects"
version = "1.0.0"
authors = ["Grégoire Paris <postmaster@greg0ire.fr>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "dql"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/greg0ire/dql-treesitter"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
